--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -458,7 +458,7 @@
   "multiplayer.texturePrompt.failure.line2": "Any functionality that requires custom resources might not work as expected",
   "multiplayer.texturePrompt.serverPrompt": "%s\n\nMessage from server:\n%s",
   "multiplayer.applyingPack": "Applying resource pack",
-  "multiplayer.downloadingTerrain": "Loading terrain...",
+  "multiplayer.downloadingTerrain": "Loading Map...",
   "multiplayer.downloadingStats": "Retrieving statistics...",
   "multiplayer.stopSleeping": "Leave Bed",
   "multiplayer.message_not_delivered": "Can't deliver chat message, check server logs: %s",
@@ -1918,7 +1918,7 @@
   "item.minecraft.stone_pickaxe": "Stone Pickaxe",
   "item.minecraft.stone_axe": "Stone Axe",
   "item.minecraft.diamond_sword": "Diamond Sword",
-  "item.minecraft.diamond_shovel": "Diamond Shovel",
+  "item.minecraft.diamond_shovel": "\u00A76Spleef \u00A74Shovel",
   "item.minecraft.diamond_pickaxe": "Diamond Pickaxe",
   "item.minecraft.diamond_axe": "Diamond Axe",
   "item.minecraft.stick": "Stick",
