--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -168,15 +168,15 @@
   "translation.test.invalid2": "hi %  s",
   "translation.test.args": "%s %s",
   "translation.test.world": "world",
-  "menu.game": "Game Menu",
+  "menu.game": "",
   "menu.singleplayer": "Singleplayer",
   "menu.multiplayer": "Multiplayer",
   "menu.online": "Minecraft Realms",
-  "menu.options": "Options...",
+  "menu.options": "\u00A76ᴏᴘᴛɪᴏɴs",
   "menu.quit": "Quit Game",
   "menu.returnToMenu": "Save and Quit to Title",
-  "menu.disconnect": "Disconnect",
-  "menu.returnToGame": "Back to Game",
+  "menu.disconnect": "\u00A74ᴘʟᴇᴀsᴇ ᴅᴏɴ'ᴛ ʟᴇᴀᴠᴇ :(",
+  "menu.returnToGame": "\u00A74ʙᴀᴄᴋ ᴛᴏ ᴍᴄ sʜᴏᴡᴅᴏᴡɴ",
   "menu.generatingLevel": "Generating world",
   "menu.loadingLevel": "Loading world",
   "menu.savingLevel": "Saving world",
@@ -188,9 +188,9 @@
   "menu.convertingLevel": "Converting world",
   "menu.respawning": "Respawning",
   "menu.shareToLan": "Open to LAN",
-  "menu.sendFeedback": "Give Feedback",
-  "menu.reportBugs": "Report Bugs",
-  "menu.playerReporting": "Player Reporting",
+  "menu.sendFeedback": "\u00A74ɢɪᴠᴇ ғᴇᴇᴅʙᴀᴄᴋ",
+  "menu.reportBugs": "\u00A74ʀᴇᴘᴏʀᴛ ʙᴜɢs",
+  "menu.playerReporting": "\u00A74\u00A7lᴅɪsᴀʙʟᴇᴅ!",
   "menu.paused": "Game Paused",
   "menu.modded": " (Modded)",
   "optimizeWorld.confirm.title": "Optimize World",
@@ -458,7 +458,7 @@
   "multiplayer.texturePrompt.failure.line2": "Any functionality that requires custom resources might not work as expected",
   "multiplayer.texturePrompt.serverPrompt": "%s\n\nMessage from server:\n%s",
   "multiplayer.applyingPack": "Applying resource pack",
-  "multiplayer.downloadingTerrain": "Loading Map...",
+  "multiplayer.downloadingTerrain": "ʟᴏᴀᴅɪɴɢ ᴍᴀᴘ...",
   "multiplayer.downloadingStats": "Retrieving statistics...",
   "multiplayer.stopSleeping": "Leave Bed",
   "multiplayer.message_not_delivered": "Can't deliver chat message, check server logs: %s",
@@ -1891,7 +1891,7 @@
   "item.minecraft.flint_and_steel": "Flint and Steel",
   "item.minecraft.apple": "Apple",
   "item.minecraft.cookie": "Cookie",
-  "item.minecraft.bow": "Bow",
+  "item.minecraft.bow": "\u00A76ᴋʙᴍ \u00A74ʙᴏᴡ",
   "item.minecraft.bundle": "Bundle",
   "item.minecraft.bundle.fullness": "%s/%s",
   "item.minecraft.arrow": "Arrow",
@@ -1918,7 +1918,7 @@
   "item.minecraft.stone_pickaxe": "Stone Pickaxe",
   "item.minecraft.stone_axe": "Stone Axe",
   "item.minecraft.diamond_sword": "Diamond Sword",
-  "item.minecraft.diamond_shovel": "\u00A76Spleef \u00A74Shovel",
+  "item.minecraft.diamond_shovel": "\u00A76sᴘʟᴇᴇғ \u00A74sʜᴏᴠᴇʟ",
   "item.minecraft.diamond_pickaxe": "Diamond Pickaxe",
   "item.minecraft.diamond_axe": "Diamond Axe",
   "item.minecraft.stick": "Stick",
@@ -2712,7 +2712,7 @@
   "effect.minecraft.absorption": "Absorption",
   "effect.minecraft.saturation": "Saturation",
   "effect.minecraft.glowing": "Glowing",
-  "effect.minecraft.luck": "\u00A74MC \u00A76Showdown",
+  "effect.minecraft.luck": "\u00A74ᴍᴄ \u00A76sʜᴏᴡᴅᴏᴡɴ",
   "effect.minecraft.unluck": "Bad Luck",
   "effect.minecraft.levitation": "Levitation",
   "effect.minecraft.slow_falling": "Slow Falling",
@@ -2874,8 +2874,8 @@
   "gui.minutes": "%s minute(s)",
   "gui.hours": "%s hour(s)",
   "gui.days": "%s day(s)",
-  "gui.advancements": "Advancements",
-  "gui.stats": "Statistics",
+  "gui.advancements": "\u00A76ᴀᴅᴠᴀɴᴄᴇᴍᴇɴᴛs",
+  "gui.stats": "\u00A76sᴛᴀᴛɪsᴛɪᴄs",
   "gui.entity_tooltip.type": "Type: %s",
   "advancements.empty": "There doesn't seem to be anything here...",
   "advancements.sad_label": ":(",
