--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -175,7 +175,7 @@
   "menu.options": "\u00A76ᴏᴘᴛɪᴏɴs",
   "menu.quit": "Quit Game",
   "menu.returnToMenu": "Save and Quit to Title",
-  "menu.disconnect": "\u00A74ᴘʟᴇᴀsᴇ ᴅᴏɴ'ᴛ ʟᴇᴀᴠᴇ :(",
+  "menu.disconnect": "\u00A74ᴘʟᴇᴀsᴇ ᴅᴏɴ'ᴛ ʟᴇᴀᴠᴇ",
   "menu.returnToGame": "\u00A74ʙᴀᴄᴋ ᴛᴏ ᴍᴄ sʜᴏᴡᴅᴏᴡɴ",
   "menu.generatingLevel": "Generating world",
   "menu.loadingLevel": "Loading world",
@@ -2874,7 +2874,7 @@
   "gui.minutes": "%s minute(s)",
   "gui.hours": "%s hour(s)",
   "gui.days": "%s day(s)",
-  "gui.advancements": "\u00A76ᴀᴅᴠᴀɴᴄᴇᴍᴇɴᴛs",
+  "gui.advancements": "\u00A76ᴀᴄʜɪᴇᴠᴇᴍᴇɴᴛs",
   "gui.stats": "\u00A76sᴛᴀᴛɪsᴛɪᴄs",
   "gui.entity_tooltip.type": "Type: %s",
   "advancements.empty": "There doesn't seem to be anything here...",
